# tts-gateway

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini
app/: __init__.py  auth.py  circuit_breaker.py  config.py  main.py  metrics.py  redis_store.py  scheduler.py  schemas.py
app/adapters/: __init__.py  base.py  f5_adapter.py  qwen_adapter.py
app/storage/: __init__.py  audio_store.py
docs/: BOT_SERVICE_EXTERNAL_INTEGRATION.md
scripts/: fairness_probe.py  load_test.py
tests/: test_f5_adapter.py
